--- a/src/index.css
+++ b/src/index.css
@@ -20,17 +20,30 @@
 }
 
 .black-gradient {
-  background: #000000; /* fallback for old browsers */
+  background: #000000; 
   background: -webkit-linear-gradient(
     to right,
     #434343,
     #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  ); 
   background: linear-gradient(
     to right,
     #434343,
     #000000
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  ); 
+}
+
+.gradient3 {
+  background: linear-gradient(
+    40deg,
+    #28f1ff ,
+     #750bad ) ;
+}
+.socials li:hover {
+ background: linear-gradient( to top, #F96CAF , #7C61E5 );
+}
+.black-gradient2  {
+  background: linear-gradient( to top, #023774 , #0b0425 );
 }
 
 .violet-gradient {
@@ -48,19 +61,27 @@
   background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
   background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
 }
+.navlinks ul li:hover , .navlinks p:hover
+  {
+  background: "#00cea8";
+  background: linear-gradient( to top, #F96CAF , #7C61E5 );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  ;
+}
 
 .orange-text-gradient {
-  background: #f12711; /* fallback for old browsers */
+  background: #f12711; 
   background: -webkit-linear-gradient(
     to top,
     #f12711,
     #f5af19
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  ); 
   background: linear-gradient(
     to top,
     #f12711,
     #f5af19
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  ); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -113,6 +134,8 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+
 
 /* canvas- styles */
 .canvas-loader {
@@ -204,9 +227,3 @@
 }
 
 
-.socials li:hover {
-  background: "#00cea8" ;
-  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%) ;
-  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%) ;
-
-}
